# semanticquark

./: ADD_TO_PATH.md  BRANDING.md  BUILD_COMPLETE.md  CLI_TOOLS_TEST.md  COMPLETE_PLATFORM_SUMMARY.md  COMPONENT_DIAGRAM_BLOCKS.md  CUBEJS_FEATURES_GAP_ANALYSIS.md  CUBEJS_FEATURE_GAP_ANALYSIS.md  CUBEJS_FEATURE_TEST_RESULTS.md  DATABASE_SCHEMA_LARGE.md  DATABASE_SETUP.md  DATA_STATUS.md  DOCKER_SETUP.md  Dockerfile  FINAL_BUILD_STATUS.md  FIXES_APPLIED.md  IMPLEMENTATION_PROGRESS.md  LARGE_DATASET_SETUP.md  METHODS_SECTION.md  METHODX_METHODS_SECTION.md  METHODX_METHODS_SECTION_CONDENSED.md  METHODX_METHODS_SECTION_FINAL.md  METHOD_VALIDATION_SENSORS.md  MODULAR_MIGRATION_COMPLETE.md  PLATFORM_BUILD_COMPLETE.md  PLATFORM_COMPLETE.md  PRD_COMPLETE_SEMANTIC_LAYER.md  PROJECT_NAMES.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SEQUENCE_AND_FLOW_DIAGRAMS.md  SQL_BUILDER_COMPARISON.md  SUBQUERIES_AND_CTES_EXAMPLES.md  SemanticQuark_Abstract.md  SemanticQuark_Presentation.pptx  TESTING.md  TEST_RESULTS.md  TEST_RESULTS_COMPREHENSIVE.md  check_graphql.py  (+20 more)
models/: categories.yaml  customers.yaml  order_items.yaml  orders.yaml  payments.yaml  products.yaml
scripts/: comprehensive_test.py  init_db.sql  init_db_epa_air_quality.sql  init_db_large.sql  test_api_functionality.py  test_cubejs_features.py  test_in_docker.sh  test_migration.py  test_queries.sh  test_setup.sh
semantic_layer/: __init__.py
semantic_layer/api/: __init__.py  app.py  graphql.py  main.py  middleware.py  sql_api.py
semantic_layer/auth/: __init__.py  api_key_auth.py  base.py  jwt_auth.py
semantic_layer/cache/: __init__.py  base.py  key_generator.py  memory.py  redis_cache.py
semantic_layer/cli/: __init__.py  main.py
semantic_layer/config/: __init__.py  settings.py
semantic_layer/connectors/: __init__.py  base.py  mysql.py  postgresql.py
semantic_layer/drivers/: __init__.py  base_driver.py  driver_factory.py  mysql_driver.py  postgres_driver.py
semantic_layer/engine/: __init__.py  query_engine.py
semantic_layer/exceptions/: __init__.py  base.py
semantic_layer/integrations/: __init__.py  base.py  registry.py
semantic_layer/llm/: __init__.py  base.py  registry.py
semantic_layer/logging/: __init__.py
semantic_layer/metadata/: __init__.py  catalog.py  discovery.py  introspection.py  schema_extractor.py
semantic_layer/metrics/: __init__.py
semantic_layer/models/: __init__.py  base.py  cube.py  dimension.py  measure.py  relationship.py  schema.py
semantic_layer/monitoring/: __init__.py  callback_manager.py  callbacks.py  health.py  logging.py  metrics.py  tracing.py
semantic_layer/orchestrator/: __init__.py  execution_plan.py  metrics.py  orchestrator.py  pipeline.py
svg/: archiecture_v1.txt  compoentn _arch.txt  flow chart component by component  graphical abstract
tests/: test_cte_in_api.py  test_e2e_service.py  test_end_to_end_with_db.py  test_graph_path_finding.py  test_graph_path_finding_complex.py  test_having_and_cte.py  test_having_and_cte_integration.py  test_integration_docker.py  test_integration_with_db.py  test_logical_filters_and_relative_dates.py  test_query_types.py
(+48 files in other folders)
